--- a/loop-the-loop/Base.lproj/Main.storyboard
+++ b/loop-the-loop/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UgV-1Y-4tL">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -33,7 +33,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="captureView" destination="UgV-1Y-4tL" id="2tS-yB-l9k"/>
-                        <segue destination="XPP-8j-XyF" kind="show" identifier="PreviewSegue" id="YVT-l5-RZq"/>
+                        <segue destination="PyG-FY-4JL" kind="show" identifier="PreviewSegue" id="sR9-rW-aqv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -45,22 +45,49 @@
             </objects>
             <point key="canvasLocation" x="552.5" y="1255.5"/>
         </scene>
-        <!--Preview-->
+        <!--AV Player View Controller-->
         <scene sceneID="Bv5-1S-lOe">
             <objects>
                 <avPlayerViewController videoGravity="AVLayerVideoGravityResizeAspect" id="XPP-8j-XyF" customClass="PreviewAVPlayerViewController" customModule="loop_the_loop" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Preview" id="tCY-m6-XnZ">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="adV-Rr-4KC">
-                            <connections>
-                                <action selector="localSave:" destination="XPP-8j-XyF" id="ztb-Mx-eKB"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </avPlayerViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BZH-Ft-VLX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="990.5" y="1255.5"/>
+            <point key="canvasLocation" x="1501.5" y="1255.5"/>
+        </scene>
+        <!--Preview-->
+        <scene sceneID="8hc-jX-KbH">
+            <objects>
+                <viewController id="PyG-FY-4JL" customClass="PreviewViewController" customModule="loop_the_loop" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Blm-Eg-0vb"/>
+                        <viewControllerLayoutGuide type="bottom" id="WuZ-4U-X7A"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dDl-b1-mUy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A8T-OS-Qya">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <connections>
+                                    <segue destination="XPP-8j-XyF" kind="embed" identifier="playerViewControllerSegue" id="cua-e0-HFw"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Preview" id="MxB-g0-p4t">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="grp-Ex-UPG">
+                            <connections>
+                                <action selector="localSave:" destination="PyG-FY-4JL" id="sh3-Hl-cMH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j4N-ta-zRv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1025.5" y="1255.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="eAs-nb-Eli">
